[gd_scene load_steps=15 format=3 uid="uid://b15g0bi5kcrg6"]

[ext_resource type="Script" uid="uid://dylw80aodfq2q" path="res://Sounds/SoundManager.gd" id="1_qt0tq"]
[ext_resource type="AudioStream" uid="uid://bvdmag0iacqeo" path="res://Sounds/SkaterSounds/sakte02.wav" id="3_dlbw1"]
[ext_resource type="AudioStream" uid="uid://hd5bmcikvnmh" path="res://Sounds/SkaterSounds/skate01.wav" id="4_wecr3"]
[ext_resource type="AudioStream" uid="uid://lcj7m468fb8d" path="res://Sounds/SkaterSounds/skate03.wav" id="5_33u3l"]
[ext_resource type="AudioStream" uid="uid://c1tpf15guryuj" path="res://Sounds/SkaterSounds/skate_jump_up.wav" id="6_ufy5j"]
[ext_resource type="AudioStream" uid="uid://rp3jnmy0vav" path="res://Sounds/SkaterSounds/Skater_landing.wav" id="7_loc3n"]
[ext_resource type="AudioStream" uid="uid://dn07wfy85nl7t" path="res://Sounds/SkaterSounds/player_hurt01.wav" id="8_6qnd0"]
[ext_resource type="AudioStream" uid="uid://dnp6f0hlk3asy" path="res://Sounds/SkaterSounds/player_hurt02.wav" id="9_j6jge"]
[ext_resource type="AudioStream" uid="uid://hsaav1u77hgg" path="res://Sounds/AngryGrandma/no.ogg" id="9_ro2ns"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ektlu"]
random_pitch = 1.05
random_volume_offset_db = 0.1
streams_count = 3
stream_0/stream = ExtResource("3_dlbw1")
stream_1/stream = ExtResource("4_wecr3")
stream_2/stream = ExtResource("5_33u3l")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6a3wx"]
random_pitch = 1.15
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("6_ufy5j")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ifylu"]
random_pitch = 1.15
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("7_loc3n")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_s8jmn"]
random_pitch = 1.25
random_volume_offset_db = 5.0
streams_count = 2
stream_0/stream = ExtResource("8_6qnd0")
stream_1/stream = ExtResource("9_j6jge")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dlbw1"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("9_ro2ns")

[node name="SoundManager" type="Node2D"]
script = ExtResource("1_qt0tq")

[node name="SakterSounds" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="RollingSound" type="AudioStreamPlayer2D" parent="SakterSounds"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_ektlu")
autoplay = true

[node name="JumpSound" type="AudioStreamPlayer2D" parent="SakterSounds"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_6a3wx")

[node name="LandingSound" type="AudioStreamPlayer2D" parent="SakterSounds"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_ifylu")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="SakterSounds"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_s8jmn")

[node name="AngryGrandma" type="Node2D" parent="."]

[node name="NoSound" type="AudioStreamPlayer2D" parent="AngryGrandma"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_dlbw1")
pitch_scale = 1.25
max_polyphony = 4
